--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,14 @@
 <h1>Make your form here</h1>
+<form method="POST" action="/pirates">
+  <p>Name: <input type="text" name="pirate[name]"/>
+  <p>Weight: <input type="text" name="pirate[weight]"/>
+  <p>Height: <input type="text" name="pirate[height]"/>
+  <p>ship_name_1: <input type="text" id="ship_name_1" name="pirate[ships][][name]"/>
+  <p>ship_type_1: <input type="text" id="ship_type_1" name="pirate[ships][][type]"/>
+  <p>ship_booty_1: <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"/>
+  <p>ship_name_2: <input type="text" id="ship_name_2" name="pirate[ships][][name]"/>
+  <p>ship_type_2: <input type="text" id="ship_type_2" name="pirate[ships][][type]"/>
+  <p>ship_booty_2: <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"/>
+  <br><input type="submit" value="Submit">
+
+</form>
